# Bekant

./: .gitignore  CMakeLists.txt  README.md  bekant.cpp  bekant.h  bekant.qrc  bekant.rc  bekantnetwork.cpp  bekantnetwork.h  main.cpp  main.qml  memorypositionlist.cpp  memorypositionlist.h  memorypositionmodel.cpp  memorypositionmodel.h
esp32/: Bekant.ino  data.cpp  data.h  lin.cpp  lin.h  server.cpp  server.h
qml/: BekantButton.qml  BekantInput.qml  BekantMemoryPosition.qml  Values.qml
